# beepboopyoucad

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
beepboopyoucad/: __init__.py  banana_client.py  claude_client.py  game.py  google_client.py  main.py
tests/: test_basic.py
